--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
   "name": "angular-content",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "dev": "ts-node ./server/server.ts",
-    "prod": "npm run tsc"
-  },
+  "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "build": "tsc",
+    "dev": "nodemon ./dist/out-tsc/server.js",
+    "start": "ts-node ./src/server/server.ts",
+    "prod": "npm run build && npm run start"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "src/server/**/*.test.js",
+      "node_modules"
+    ],
+    "watch": [
+      "server"
+    ],
+    "exec": "npm start",
+    "ext": "ts"
+  },
   "dependencies": {
     "@angular/animations": "~12.0.0",
     "@angular/common": "~12.0.0",
@@ -20,9 +28,13 @@
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
+    "@popperjs/core": "^2.9.2",
+    "@types/express": "^4.17.12",
     "ace-builds": "^1.4.12",
     "ajv": "^6.9.1",
+    "body-parser": "^1.19.0",
     "bootstrap": "^5.0.1",
+    "express": "^4.17.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
@@ -41,7 +53,8 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "nodemon": "^2.0.7",
     "ts-node": "^10.0.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.4"
   }
 }
